--- a/views/detail.html
+++ b/views/detail.html
@@ -92,15 +92,16 @@
     </div>
     <div id="detail">
         <div class="productwrapper">
-            <div class="thumbnail w3-hide-small">
-                <a href=""><img src="imgs/blimp-458_750x.webp" alt=""></a>
-                <a href=""><img src="imgs/blimp-448_750x.webp" alt=""></a>
-                <a href=""><img src="imgs/blimp-silver-945_750x.webp" alt=""></a>
-                <a href=""><img src="imgs/blimp-891_750x.webp" alt=""></a>
-                <a href=""><img src="imgs/blimp-385_750x.webp" alt=""></a>
-                <a href=""><img src="imgs/blimp-135_750x.webp" alt=""></a>
+            <div class="thumbnailwrapper">
+                <div class="thumbnail w3-hide-small">
+                    <a href=""><img src="imgs/blimp-458_750x.webp" alt=""></a>
+                    <a href=""><img src="imgs/blimp-448_750x.webp" alt=""></a>
+                    <a href=""><img src="imgs/blimp-silver-945_750x.webp" alt=""></a>
+                    <a href=""><img src="imgs/blimp-891_750x.webp" alt=""></a>
+                    <a href=""><img src="imgs/blimp-385_750x.webp" alt=""></a>
+                    <a href=""><img src="imgs/blimp-135_750x.webp" alt=""></a>
+                </div>
             </div>
-
             <div class="maindetail">
                 <div class="pictures">
                     <img src="imgs/blimp-458_750x.webp" alt="">
@@ -336,6 +337,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/jquery-3.5.1.min"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sticksy@latest/dist/sticksy.min.js"></script>
     <script src="js/sticky.js"></script>
     <script src="js/main.js"></script>
 </body>
