--- a/views/detail.html
+++ b/views/detail.html
@@ -94,22 +94,22 @@
         <div class="productwrapper">
             <div class="thumbnailwrapper">
                 <div class="thumbnail w3-hide-small">
-                    <a href=""><img src="imgs/blimp-458_750x.webp" alt=""></a>
-                    <a href=""><img src="imgs/blimp-448_750x.webp" alt=""></a>
-                    <a href=""><img src="imgs/blimp-silver-945_750x.webp" alt=""></a>
-                    <a href=""><img src="imgs/blimp-891_750x.webp" alt=""></a>
-                    <a href=""><img src="imgs/blimp-385_750x.webp" alt=""></a>
-                    <a href=""><img src="imgs/blimp-135_750x.webp" alt=""></a>
+                    <a href="#img-1"><img src="imgs/blimp-458_750x.webp" alt=""></a>
+                    <a href="#img-2"><img src="imgs/blimp-448_750x.webp" alt=""></a>
+                    <a href="#img-3"><img src="imgs/blimp-silver-945_750x.webp" alt=""></a>
+                    <a href="#img-4"><img src="imgs/blimp-891_750x.webp" alt=""></a>
+                    <a href="#img-5"><img src="imgs/blimp-385_750x.webp" alt=""></a>
+                    <a href="#img-6"><img src="imgs/blimp-135_750x.webp" alt=""></a>
                 </div>
             </div>
             <div class="maindetail">
                 <div class="pictures">
-                    <img src="imgs/blimp-458_750x.webp" alt="">
-                    <img src="imgs/blimp-448_750x.webp" alt="">
-                    <img src="imgs/blimp-silver-945_750x.webp" alt="">
-                    <img src="imgs/blimp-891_750x.webp" alt="">
-                    <img src="imgs/blimp-385_750x.webp" alt="">
-                    <img src="imgs/blimp-135_750x.webp" alt="">
+                    <img id="img-1" src="imgs/blimp-458_750x.webp" alt="">
+                    <img id="img-2" src="imgs/blimp-448_750x.webp" alt="">
+                    <img id="img-3" src="imgs/blimp-silver-945_750x.webp" alt="">
+                    <img id="img-4" src="imgs/blimp-891_750x.webp" alt="">
+                    <img id="img-5" src="imgs/blimp-385_750x.webp" alt="">
+                    <img id="img-6" src="imgs/blimp-135_750x.webp" alt="">
                 </div>
                 <div class="description">
                     <h1>Blimp</h1>
