--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
 
             <button class="w3-button w3-white w3-display-left w3-hide-small w3-hide-medium" onclick="plusDivs(-1)">&#10094;</button>
             <button class="w3-button w3-white w3-display-right w3-hide-small w3-hide-medium" onclick="plusDivs(1)">&#10095;</button>
-            <button class="w3-button w3-white w3-display-left w3-hide-large" onclick="mb_plusDivs(-1)">&#10094;</button>
+            <button class="w3-button w3-white w3-display-left w3-hide-large " onclick="mb_plusDivs(-1)">&#10094;</button>
             <button class="w3-button w3-white w3-display-right w3-hide-large" onclick="mb_plusDivs(1)">&#10095;</button>
         </div>
 
@@ -344,8 +344,10 @@
             </div>
         </div>
     </footer>
+    <script src="js/swiped-events-master/src/swiped-events.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
