--- a/views/index.html
+++ b/views/index.html
@@ -344,9 +344,11 @@
             </div>
         </div>
     </footer>
-    <script src="js/swiped-events-master/src/swiped-events.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="js/jquery-3.5.1.min"></script>
+    <script src="js/swiped-events.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/sticky.js"></script>
+    <script src="js/slider.js"></script>
 
 </body>
 
