--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Nutrition
+Theme Name: treetwear
 Theme URI: https://noteatext.com
 Author: DTTLinh
 Author URI: https://noteatext.com
-Description: Theme for nutrition web
+Description: Theme for streetwear web
 Tags: blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
 Version: 1.0
 Requires at least: 5.0
@@ -11,7 +11,7 @@ Tested up to: 5.4
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: Nutrition
+Text Domain: streetwear
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
