--- a/views/index.html
+++ b/views/index.html
@@ -40,9 +40,9 @@
 
                 </li>
                 <li><a href="">Blackout capsule</a></li>
-                <li><a href=""><i class="fa fa-user-o" aria-hidden="true"></i></a> <a href=""><i class="fa fa-search" aria-hidden="true"></i></a> <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
+        <div class="iconmenu"><a href=""><i class="fa fa-user-o" aria-hidden="true"></i></a> <a href=""><i class="fa fa-search" aria-hidden="true"></i></a> <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></div>
     </div>
     <div id="notif">FREE U.S. SHIPPING ON ALL JEWELRY ORDERS</div>
     <div id="background">
@@ -61,37 +61,37 @@
 
         <div id="top" class="w3-hide-small w3-hide-medium">
             <div id="logo"><img src="imgs/Chrome_Logo_2_200x.webp" alt="logo"></div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li>
+            <div class="menuwrapper">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li>
 
-                        <a href="category.html">Jewelry</a>
-                        <ul>
-                            <li><a href="">Necklaces</a></li>
-                            <li><a href="">Bracelets</a></li>
-                            <li><a href="">Rings</a></li>
-                            <li><a href="">Earrings</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="category.html">Clothing</a>
-                        <ul>
-                            <li><a href="">All clothing</a></li>
-                            <li><a href="">Sweatshirts</a></li>
-                            <li><a href="">T-shirts</a></li>
-                            <li><a href="">Hats</a></li>
-                            <li><a href="">Bag boy capsule 1</a></li>
-                        </ul>
+                            <a href="category.html">Jewelry</a>
+                            <ul>
+                                <li><a href="">Necklaces</a></li>
+                                <li><a href="">Bracelets</a></li>
+                                <li><a href="">Rings</a></li>
+                                <li><a href="">Earrings</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="category.html">Clothing</a>
+                            <ul>
+                                <li><a href="">All clothing</a></li>
+                                <li><a href="">Sweatshirts</a></li>
+                                <li><a href="">T-shirts</a></li>
+                                <li><a href="">Hats</a></li>
+                                <li><a href="">Bag boy capsule 1</a></li>
+                            </ul>
 
-                    </li>
-                    <li><a href="">Blackout capsule</a></li>
-                    <li><a href=""><i class="fa fa-user-o" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
-                    <hr />
-                </ul>
-            </nav>
+                        </li>
+                        <li><a href="">Blackout capsule</a></li>
+                        <hr />
+                    </ul>
+                </nav>
+                <div class="iconmenu"><a href=""><i class="fa fa-user-o" aria-hidden="true"></i></a> <a href=""><i class="fa fa-search" aria-hidden="true"></i></a> <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></div>
+            </div>
         </div>
         <div id="mobile-top" class="w3-hide-large">
             <div id="mobile-nav" onclick="w3_open()"><i class="fa fa-bars" aria-hidden="true"></i></div>
