--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -993,3 +993,35 @@ p.stars {
 .woocommerce table td {
     border-top: 1px solid #FF860B !important;
 }
+
+
+/* cart icon */
+
+.cart-contents:before {
+    font-family: WooCommerce;
+    content: "\e01d";
+    font-size: 28px;
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: 400;
+    padding-right: 5px;
+    vertical-align: bottom;
+}
+
+.cart-contents:hover {
+    text-decoration: none;
+}
+
+.cart-contents-count {
+    color: #fff;
+    background-color: #2ecc71;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1px 6px;
+    line-height: 1;
+    font-family: Arial, Helvetica, sans-serif;
+    vertical-align: top;
+}
+
+
+/* end cart icon */
