--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: treetwear
+Theme Name: streetwear
 Theme URI: https://noteatext.com
 Author: DTTLinh
 Author URI: https://noteatext.com
